Make a SQLite cache of Lunar Phases from API calls

--- a/C#/SolarLunarName/SolarLunarName.CLI/SolarLunarName.CLI.csproj
+++ b/C#/SolarLunarName/SolarLunarName.CLI/SolarLunarName.CLI.csproj
@@ -6,6 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
   </ItemGroup>
 
