Make Debug work on relative path

--- a/C#/SolarLunarName/SolarLunarName.PoSH/Properties/launchSettings.json
+++ b/C#/SolarLunarName/SolarLunarName.PoSH/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "SolarLunarName.PoSH": {
       "commandName": "Executable",
       "executablePath": "powershell",
-      "commandLineArgs": "-ExecutionPolicy Bypass   -noexit  .\\debug.ps1 ",
-      "workingDirectory": "C:\\Users\\Craig\\Source\\Repos\\SolarLunarName\\C#\\SolarLunarName\\SolarLunarName.PoSH\\"
+      "commandLineArgs": "-ExecutionPolicy Bypass   -noexit  ..\\..\\..\\debug.ps1 "
     }
   }
 }
