Use Sql lookup from cache not rest API to query moon data.

--- a/C#/SolarLunarName/SolarLunarName.Standard/SolarLunarName.Standard.csproj
+++ b/C#/SolarLunarName/SolarLunarName.Standard/SolarLunarName.Standard.csproj
@@ -15,8 +15,13 @@
       <ExcludeAssets></ExcludeAssets>
       <IncludeAssets>All</IncludeAssets>
     </PackageReference>
+    <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0">
     </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Assets\" />
   </ItemGroup>
 
 </Project>
