started work on copying out sqlite db to uwp

--- a/C#/SolarLunarName/SolarLunarName.UWP/SolarLunarName.UWP.csproj
+++ b/C#/SolarLunarName/SolarLunarName.UWP/SolarLunarName.UWP.csproj
@@ -92,6 +92,7 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="FileAccessHelper.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
@@ -143,13 +144,21 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl">
+      <Version>1.5.231</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform" Version="6.1.9" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SolarLunarName\SolarLunarName.csproj">
-      <Project>{A1646BEA-337E-45CD-8F9B-222153555B8C}</Project>
-      <Name>SolarLunarName</Name>
+    <Content Include="MoonPhase.sqlite">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SolarLunarName.Forms\SolarLunarName.Forms.csproj">
+      <Project>{8d0c677e-4607-45ad-b872-ce4bb73e3c55}</Project>
+      <Name>SolarLunarName.Forms</Name>
     </ProjectReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
