--- a/C#/SolarLunarName/SolarLunarName.Forms/SolarLunarName.Forms.csproj
+++ b/C#/SolarLunarName/SolarLunarName.Forms/SolarLunarName.Forms.csproj
@@ -12,4 +12,12 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SolarLunarName.Standard\SolarLunarName.Standard.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
 </Project>
