--- a/C#/SolarLunarName/SolarLunarName.iOS/SolarLunarName.iOS.csproj
+++ b/C#/SolarLunarName/SolarLunarName.iOS/SolarLunarName.iOS.csproj
@@ -150,11 +150,11 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.4.0.1008975" />
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\SolarLunarName\SolarLunarName.csproj">
-      <Project>{A1646BEA-337E-45CD-8F9B-222153555B8C}</Project>
-      <Name>SolarLunarName</Name>
+    <ProjectReference Include="..\SolarLunarName.Forms\SolarLunarName.Forms.csproj">
+      <Project>{8d0c677e-4607-45ad-b872-ce4bb73e3c55}</Project>
+      <Name>SolarLunarName.Forms</Name>
     </ProjectReference>
   </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
