Implement DependencyService to copy and refference sqlite file.  Make Async version of the DB lookup

--- a/C#/SolarLunarName/SolarLunarName.Standard/SolarLunarName.Standard.csproj
+++ b/C#/SolarLunarName/SolarLunarName.Standard/SolarLunarName.Standard.csproj
@@ -7,6 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\MoonPhase.sqlite" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Assets\MoonPhase.sqlite" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1">
       <ExcludeAssets></ExcludeAssets>
       <IncludeAssets>All</IncludeAssets>
@@ -15,13 +23,12 @@
       <ExcludeAssets></ExcludeAssets>
       <IncludeAssets>All</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="sqlite-net-pcl" Version="1.5.231" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.5.231">
+      <IncludeAssets>All</IncludeAssets>
+      <ExcludeAssets></ExcludeAssets>
+    </PackageReference>
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.5.0">
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Assets\" />
   </ItemGroup>
 
 </Project>
