--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,6 @@ install:
   - nuget install xunit.runners -Version 1.9.2 -OutputDirectory testrunner
 script:
   - msbuild /p:Configuration=Release ./C#/SolarLunarName/SolarLunarName.Standard.Tests 
-  - ls
-  - ls ./C#/SolarLunarName/SolarLunarName.Standard.Tests/bin/Release/
-  - mono ./testrunner/xunit.runners.1.9.2/tools/xunit.console.clr4.exe ./bin/Release/netcoreapp3.0/SolarLunarName.Standard.Tests.dll
+  - ls ./C#/SolarLunarName/SolarLunarName.Standard.Tests/bin/Release/netcoreapp3.0/
+  - pwd
+  - mono ./testrunner/xunit.runners.1.9.2/tools/xunit.console.clr4.exe ./C#/SolarLunarName/SolarLunarName.Standard.Tests/bin/Release/netcoreapp3.0/SolarLunarName.Standard.Tests.dll
