--- a/C#/SolarLunarName/SolarLunarName.Standard/SolarLunarName.Standard.csproj
+++ b/C#/SolarLunarName/SolarLunarName.Standard/SolarLunarName.Standard.csproj
@@ -4,14 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
+    <PackageId>SolarLunarName.Standard</PackageId>
+    <Version>1.0.1</Version>
+    <Authors>Craig Chamberlain</Authors>
+    <Company>Craig Chamberlain IT</Company>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.1">
-      <ExcludeAssets></ExcludeAssets>
-      <IncludeAssets>All</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="RestSharp" Version="106.6.10">
       <ExcludeAssets></ExcludeAssets>
       <IncludeAssets>All</IncludeAssets>
     </PackageReference>
