--- a/C#/SolarLunarName/SolarLunarName.Web.Client/SolarLunarName.Web.Client.fsproj
+++ b/C#/SolarLunarName/SolarLunarName.Web.Client/SolarLunarName.Web.Client.fsproj
@@ -17,4 +17,7 @@
     <PackageReference Include="NodaTime" Version="3.0.0-beta01" />
     <PackageReference Include="NodaTimePicker" Version="0.4.2" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.7.1" />
+  </ItemGroup>
 </Project>
