--- a/C#/SolarLunarName/SolarLunarName.Web.Server/SolarLunarName.Web.Server.fsproj
+++ b/C#/SolarLunarName/SolarLunarName.Web.Server/SolarLunarName.Web.Server.fsproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\SolarLunarName.Standard\SolarLunarName.Standard.csproj">
@@ -21,6 +21,9 @@
     <PackageReference Include="Bolero.HotReload.Server" Version="0.10.4-preview9" />
     <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="3.0-preview9.*" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.0.*" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Update="FSharp.Core" Version="4.7.1" />
   </ItemGroup>
 
 </Project>
