--- a/C#/SolarLunarName/SolarLunarName.Web.Client/SolarLunarName.Web.Client.fsproj
+++ b/C#/SolarLunarName/SolarLunarName.Web.Client/SolarLunarName.Web.Client.fsproj
@@ -1,23 +1,21 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard2.1</TargetFramework>
+    <RazorLangVersion>3.0</RazorLangVersion>
   </PropertyGroup>
-  <ItemGroup>
+  <ItemGroup>    
     <Compile Include="DatePickerComp.fs" />
     <Compile Include="Main.fs" />
     <Compile Include="Startup.fs" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Bolero" Version="0.10.1-preview9" />
-    <PackageReference Include="Bolero.Build" Version="0.10.1-preview9" />
-    <PackageReference Include="Bolero.HotReload" Version="0.10.4-preview9" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Build" Version="3.0-preview9.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.DevServer" Version="3.0-preview9.*" />
+    <PackageReference Include="Bolero" Version="0.12.12-preview32" />
+    <PackageReference Include="Bolero.Build" Version="0.12.12-preview32" />
+    <PackageReference Include="Bolero.HotReload" Version="0.12.5-preview32" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0-preview2.20160.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0-preview2.20160.5" />
     <PackageReference Include="NodaTime" Version="3.0.0-beta01" />
-    <PackageReference Include="NodaTimePicker" Version="0.4.2" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="4.7.1" />
+    <PackageReference Include="NodaTimePicker" Version="0.7.0" />
   </ItemGroup>
 </Project>
