--- a/C#/SolarLunarName/SolarLunarName.Web.Server/SolarLunarName.Web.Server.fsproj
+++ b/C#/SolarLunarName/SolarLunarName.Web.Server/SolarLunarName.Web.Server.fsproj
@@ -17,13 +17,9 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SolarLunarName.Web.Client\SolarLunarName.Web.Client.fsproj" />
-    <PackageReference Include="Bolero.Server" Version="0.10.1-preview9" />
-    <PackageReference Include="Bolero.HotReload.Server" Version="0.10.4-preview9" />
-    <PackageReference Include="Microsoft.AspNetCore.Blazor.Server" Version="3.0-preview9.*" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.0.*" />
+    <PackageReference Include="Bolero.Server" Version="0.12.12-preview32" />
+    <PackageReference Include="Bolero.HotReload.Server" Version="0.12.5-preview32" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="3.2.0-preview2.20160.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="3.1" />
   </ItemGroup>
-  <ItemGroup>
-    <PackageReference Update="FSharp.Core" Version="4.7.1" />
-  </ItemGroup>
-
 </Project>
