--- a/C#/SolarLunarName/SolarLunarName.Web.Client/SolarLunarName.Web.Client.fsproj
+++ b/C#/SolarLunarName/SolarLunarName.Web.Client/SolarLunarName.Web.Client.fsproj
@@ -18,4 +18,13 @@
     <PackageReference Include="NodaTime" Version="3.0.0-beta01" />
     <PackageReference Include="NodaTimePicker" Version="0.7.0" />
   </ItemGroup>
+    <ItemGroup>
+    <ProjectReference Include="..\SolarLunarName.SharedTypes\SolarLunarName.SharedTypes.csproj">
+      <CopyLocalSatelliteAssemblies>true</CopyLocalSatelliteAssemblies>
+      <IncludeAssets>all</IncludeAssets>
+      <Private>true</Private>
+    </ProjectReference>
+  
+
+  </ItemGroup>
 </Project>
