--- a/C#/SolarLunarName/SolarLunarName.Fable/package.json
+++ b/C#/SolarLunarName/SolarLunarName.Fable/package.json
@@ -8,34 +8,36 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@babel/polyfill": "^7.8.7",
-    "@fortawesome/fontawesome-free": "^5.13.0",
-    "core-js": "^3.6.4",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "@babel/polyfill": "^7.4.3",
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "bulma-calendar": "0.1.7",
+    "bulma-tooltip": "^3.0.2",
+    "core-js": "^3.0.1",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/plugin-external-helpers": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.9.0",
-    "@babel/preset-env": "^7.9.0",
-    "autoprefixer": "^9.7.5",
-    "babel-loader": "^8.1.0",
-    "bulma": "^0.7.5",
-    "copy-webpack-plugin": "^5.1.1",
+    "@babel/core": "^7.4.3",
+    "@babel/plugin-external-helpers": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.4.3",
+    "@babel/preset-env": "^7.4.3",
+    "autoprefixer": "^9.5.1",
+    "babel-loader": "^8.0.5",
+    "bulma": "^0.7.4",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^2.1.1",
     "cssnano": "^4.1.10",
-    "fable-compiler": "^2.4.22",
-    "fable-loader": "^2.1.9",
+    "fable-compiler": "^2.3.3",
+    "fable-loader": "^2.1.6",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.6.0",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.11.0",
     "remotedev": "^0.2.9",
-    "sass-loader": "^7.3.1",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.10.3"
+    "webpack": "^4.30.0",
+    "webpack-cli": "^3.3.1",
+    "webpack-dev-server": "^3.3.1"
   }
 }
