Seperate into files

--- a/C#/SolarLunarName/SolarLunarName.Fable/src/SolarLunarName.Fable.fsproj
+++ b/C#/SolarLunarName/SolarLunarName.Fable/src/SolarLunarName.Fable.fsproj
@@ -2,7 +2,8 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
-  <ItemGroup>
+  <ItemGroup>    
+    <Compile Include="Types.fs" />
     <Compile Include="Services.fs" />
     <Compile Include="App.fs" />
   </ItemGroup>
