Pretify urls and and redirects from old pages.

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -25,6 +25,11 @@ markdown: kramdown
 plugins:
   - jekyll-feed
 
+permalink: pretty
+
+plugins:
+  - jekyll-redirect-from
+
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
