--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,11 @@ dotnet: 3.0
 install:
   - dotnet restore ./C#/SolarLunarName/SolarLunarName.Standard.Tests/SolarLunarName.Standard.Tests.csproj
 script:
-  - dotnet build /p:Configuration=Release ./C#/SolarLunarName/SolarLunarName.Standard.Tests 
-  - dotnet test /p:Configuration=Release ./C#/SolarLunarName/SolarLunarName.Standard.Tests/
+  - cd ./C#/SolarLunarName
+  - dotnet tool restore 
+  - dotnet paket restore
+  - dotnet build /p:Configuration=Release ./SolarLunarName.Standard.Tests 
+  - dotnet test  /p:Configuration=Release ./SolarLunarName.Standard.Tests/
+  - dotnet build /p:Configuration=Release ./SolarLunarName.SharedTypes.Tests 
+  - dotnet test  /p:Configuration=Release ./SolarLunarName.SharedTypes.Tests/
   
