Start to integrate test coverage with travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ mono: none
 dotnet: 3.0
 
 install:
+  - dotnet tool install -g coveralls.net --version 1.0.0
+  - ./CreateTestCoverage.sh
   - dotnet restore ./src/SolarLunarName/SolarLunarName.Standard.Tests/SolarLunarName.Standard.Tests.csproj
 script:
   - cd ./src/SolarLunarName
