--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,9 @@ dotnet: 3.0
 
 install:
   - dotnet tool install -g coveralls.net --version 1.0.0
-  - ./CreateTestCoverage.sh
   - dotnet restore ./src/SolarLunarName/SolarLunarName.Standard.Tests/SolarLunarName.Standard.Tests.csproj
 script:
   - cd ./src/SolarLunarName
   - dotnet tool restore 
   - dotnet paket restore
-  - dotnet build /p:Configuration=Release ./SolarLunarName.Standard.Tests 
-  - dotnet test  /p:Configuration=Release ./SolarLunarName.Standard.Tests/
-  - dotnet build /p:Configuration=Release ./SolarLunarName.SharedTypes.Tests 
-  - dotnet test  /p:Configuration=Release ./SolarLunarName.SharedTypes.Tests/
+  - source ./CreateTestCoverage.sh
