--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: csharp
 mono: none
-dotnet: 2.1.502
+dotnet: 3.0
 
 install:
-  - dotnet tool install coveralls.net --version 1.0.0 --tool-path tools
+  - dotnet tool install coveralls.net --version 2.0.0-beta.1 --tool-path tools
   - dotnet restore ./src/SolarLunarName/SolarLunarName.Standard.Tests/SolarLunarName.Standard.Tests.csproj
 script:
   - cd ./src/SolarLunarName
