--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ mono: none
 dotnet: 3.0
 
 install:
-  - dotnet tool install coveralls.net --version 2.0.0-beta.1 --tool-path tools
+  - dotnet tool install coveralls.net --version 2.0.0-beta0002 --tool-path tools
   - dotnet restore ./src/SolarLunarName/SolarLunarName.Standard.Tests/SolarLunarName.Standard.Tests.csproj
 script:
   - cd ./src/SolarLunarName
