--- a/src/SolarLunarName/SolarLunarName.SharedTypes/SolarLunarName.SharedTypes.csproj
+++ b/src/SolarLunarName/SolarLunarName.SharedTypes/SolarLunarName.SharedTypes.csproj
@@ -9,12 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.3">
-      <ExcludeAssets></ExcludeAssets>
-      <IncludeAssets>All</IncludeAssets>
-    </PackageReference>
+    <PackageReference Include="System.Collections.Immutable" Version="5.0.0" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0">
     </PackageReference>
+    <PackageReference Include="System.Text.Json" Version="5.0.0" />
 
   </ItemGroup>
 
